// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommonBundleView /> handleSetFilters should update filters config 1`] = `
<span
  class="ins-c-chip-filters"
>
  <div
    aria-labelledby="pf-random-id-5"
    class="pf-v5-c-chip-group pf-m-category"
    data-ouia-component-type="PF5/ChipGroup"
    data-ouia-safe="true"
    role="group"
  >
    <div
      class="pf-v5-c-chip-group__main"
    >
      <span
        class="pf-v5-c-chip-group__label"
        id="pf-random-id-5"
      >
        Name
      </span>
      <ul
        aria-labelledby="pf-random-id-5"
        class="pf-v5-c-chip-group__list"
        role="list"
      >
        <li
          class="pf-v5-c-chip-group__list-item"
        >
          <div
            class="pf-v5-c-chip"
            data-ouia-component-id="OUIA-Generated-Chip-1"
            data-ouia-component-type="PF5/Chip"
            data-ouia-safe="true"
          >
            <span
              class="pf-v5-c-chip__content"
            >
              <span
                class="pf-v5-c-chip__text"
                id="pf-random-id-6"
              >
                foo
              </span>
            </span>
            <span
              class="pf-v5-c-chip__actions"
            >
              <button
                aria-disabled="false"
                aria-label="close"
                aria-labelledby="remove_pf-random-id-6 pf-random-id-6"
                class="pf-v5-c-button pf-m-plain"
                data-ouia-component-id="close"
                data-ouia-component-type="PF5/Button"
                data-ouia-safe="true"
                id="remove_pf-random-id-6"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </button>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <button
    aria-disabled="false"
    class="pf-v5-c-button pf-m-link"
    data-ouia-component-id="ClearFilters"
    data-ouia-component-type="PF5/Button"
    data-ouia-safe="true"
    type="button"
  >
    Clear filters
  </button>
</span>
`;

exports[`<CommonBundleView /> should render MUAAccessTable for orgAdmins 1`] = `
<div>
  <div>
    <div
      class="pf-v5-c-toolbar  ins-c-primary-toolbar"
      data-ouia-component-id="PrimaryToolbar"
      data-ouia-component-type="PF5/Toolbar"
      data-ouia-safe="true"
      id="ins-primary-data-toolbar"
    >
      <div
        class="pf-v5-c-toolbar__content"
      >
        <div
          class="pf-v5-c-toolbar__content-section"
        >
          <div
            class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
          >
            <div
              class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
            >
              <div
                class="pf-v5-l-split ins-c-conditional-filter"
              >
                <div
                  class="pf-v5-l-split__item pf-m-fill"
                  data-ouia-component-id="ConditionalFilter"
                >
                  <button
                    aria-expanded="false"
                    aria-label="Options menu"
                    class="pf-v5-c-menu-toggle pf-m-full-width pf-m-disabled"
                    data-ouia-component-id="OUIA-Generated-MenuToggle-3"
                    data-ouia-component-type="PF5/MenuToggle"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="pf-v5-c-menu-toggle__text"
                    >
                      Filter by {key}
                    </span>
                    <span
                      class="pf-v5-c-menu-toggle__controls"
                    >
                      <span
                        class="pf-v5-c-menu-toggle__toggle-icon"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-v5-svg"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 320 512"
                          width="1em"
                        >
                          <path
                            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-v5-c-toolbar__group"
        />
      </div>
    </div>
    <table
      aria-label="permissions table"
      class="ins-c-table-empty-state pf-v5-c-table pf-m-grid-md"
      data-ouia-component-id="permissions-table"
      data-ouia-component-type="PF5/Table"
      data-ouia-safe="true"
      role="grid"
    >
      <thead
        class="pf-v5-c-table__thead"
      >
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-3"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <th
            aria-sort="ascending"
            class="pf-v5-c-table__th pf-v5-c-table__sort pf-m-selected"
            data-key="0"
            data-label="Application"
            scope="col"
            tabindex="-1"
          >
            <button
              class="pf-v5-c-table__button"
              type="button"
            >
              <div
                class="pf-v5-c-table__button-content"
              >
                <span
                  class="pf-v5-c-table__text"
                >
                  Application
                </span>
                <span
                  class="pf-v5-c-table__sort-indicator"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </th>
          <th
            class="pf-v5-c-table__th pf-v5-c-table__sort"
            data-key="1"
            data-label="Resource type"
            scope="col"
            tabindex="-1"
          >
            <button
              class="pf-v5-c-table__button"
              type="button"
            >
              <div
                class="pf-v5-c-table__button-content"
              >
                <span
                  class="pf-v5-c-table__text"
                >
                  Resource type
                </span>
                <span
                  class="pf-v5-c-table__sort-indicator"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </th>
          <th
            class="pf-v5-c-table__th pf-v5-c-table__sort"
            data-key="2"
            data-label="Operation"
            scope="col"
            tabindex="-1"
          >
            <button
              class="pf-v5-c-table__button"
              type="button"
            >
              <div
                class="pf-v5-c-table__button-content"
              >
                <span
                  class="pf-v5-c-table__text"
                >
                  Operation
                </span>
                <span
                  class="pf-v5-c-table__sort-indicator"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        class="pf-v5-c-table__tbody"
        role="rowgroup"
      >
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-4"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            colspan="3"
            data-key="0"
            data-label="Application"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-empty-state pf-m-sm"
            >
              <div
                class="pf-v5-c-empty-state__content"
              >
                <div
                  class="pf-v5-c-empty-state__header"
                >
                  <div
                    class="pf-v5-c-empty-state__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                      />
                    </svg>
                  </div>
                  <div
                    class="pf-v5-c-empty-state__title"
                  >
                    <h4
                      class="pf-v5-c-empty-state__title-text"
                    >
                      No matching {items} found
                    </h4>
                  </div>
                </div>
                <div
                  class="pf-v5-c-empty-state__body pf-v5-u-mb-md"
                >
                  You do not have individual permissions for Insights.
                   
                  <br />
                  Contact your Org. Administrator for more information.
                   
                  <br />
                </div>
                <div
                  class="pf-v5-c-empty-state__footer"
                />
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="pf-v5-c-toolbar ins-c-table__toolbar"
      data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-2"
      data-ouia-component-type="RHI/TableToolbar"
      data-ouia-safe="true"
      id="pf-random-id-1"
    >
      <div
        class="pf-v5-c-pagination pf-m-bottom"
        data-ouia-component-id="OUIA-Generated-Pagination-bottom-2"
        data-ouia-component-type="PF5/Pagination"
        data-ouia-safe="true"
        id="options-menu-bottom-pagination"
        style="--pf-v5-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="pf-v5-c-menu-toggle pf-m-plain pf-m-text"
          data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-3"
          data-ouia-component-type="PF5/MenuToggle"
          data-ouia-safe="true"
          id="options-menu-bottom-toggle"
          type="button"
        >
          <span
            class="pf-v5-c-menu-toggle__text"
          >
            <b>
              1
               - 
              10
            </b>
             
            of
             
            <b>
              0
            </b>
             
          </span>
          <span
            class="pf-v5-c-menu-toggle__controls"
          >
            <span
              class="pf-v5-c-menu-toggle__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </span>
        </button>
        <nav
          aria-label="Pagination"
          class="pf-v5-c-pagination__nav"
        >
          <div
            class="pf-v5-c-pagination__nav-control pf-m-first"
          >
            <button
              aria-disabled="true"
              aria-label="Go to first page"
              class="pf-v5-c-button pf-m-plain pf-m-disabled"
              data-action="first"
              data-ouia-component-id="OUIA-Generated-Button-plain-7"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                />
              </svg>
            </button>
          </div>
          <div
            class="pf-v5-c-pagination__nav-control"
          >
            <button
              aria-disabled="true"
              aria-label="Go to previous page"
              class="pf-v5-c-button pf-m-plain pf-m-disabled"
              data-action="previous"
              data-ouia-component-id="OUIA-Generated-Button-plain-8"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                />
              </svg>
            </button>
          </div>
          <div
            class="pf-v5-c-pagination__nav-page-select"
          >
            <span
              class="pf-v5-c-form-control"
            >
              <input
                aria-invalid="false"
                aria-label="Current page"
                data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                data-ouia-component-type="PF5/TextInput"
                data-ouia-safe="true"
                max="2"
                min="1"
                type="number"
                value="1"
              />
            </span>
          </div>
          <div
            class="pf-v5-c-pagination__nav-control"
          >
            <button
              aria-disabled="false"
              aria-label="Go to next page"
              class="pf-v5-c-button pf-m-plain"
              data-action="next"
              data-ouia-component-id="OUIA-Generated-Button-plain-9"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </button>
          </div>
          <div
            class="pf-v5-c-pagination__nav-control pf-m-last"
          >
            <button
              aria-disabled="false"
              aria-label="Go to last page"
              class="pf-v5-c-button pf-m-plain"
              data-action="last"
              data-ouia-component-id="OUIA-Generated-Button-plain-10"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                />
              </svg>
            </button>
          </div>
        </nav>
      </div>
      <div
        class="pf-v5-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-v5-c-toolbar__group"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<CommonBundleView /> should render MUARolesTable for orgAdmins 1`] = `
<div>
  <div>
    <div
      class="pf-v5-c-toolbar  ins-c-primary-toolbar"
      data-ouia-component-id="PrimaryToolbar"
      data-ouia-component-type="PF5/Toolbar"
      data-ouia-safe="true"
      id="ins-primary-data-toolbar"
    >
      <div
        class="pf-v5-c-toolbar__content"
      >
        <div
          class="pf-v5-c-toolbar__content-section"
        >
          <div
            class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
          >
            <div
              class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
            >
              <div
                class="pf-v5-l-split ins-c-conditional-filter"
              >
                <div
                  class="pf-v5-l-split__item"
                >
                  <button
                    aria-expanded="false"
                    aria-label="Conditional filter toggle"
                    class="pf-v5-c-menu-toggle ins-c-conditional-filter__group"
                    data-ouia-component-id="OUIA-Generated-MenuToggle-1"
                    data-ouia-component-type="PF5/MenuToggle"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <span
                      class="pf-v5-c-menu-toggle__text"
                    >
                      <span
                        class="pf-v5-c-icon pf-m-md"
                      >
                        <span
                          class="pf-v5-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="ins-c-conditional-filter__value-selector"
                      >
                        Application
                      </span>
                    </span>
                    <span
                      class="pf-v5-c-menu-toggle__controls"
                    >
                      <span
                        class="pf-v5-c-menu-toggle__toggle-icon"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-v5-svg"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 320 512"
                          width="1em"
                        >
                          <path
                            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="pf-v5-l-split__item pf-m-fill"
                  data-ouia-component-id="ConditionalFilter"
                >
                  <button
                    aria-expanded="false"
                    aria-label="Options menu"
                    class="pf-v5-c-menu-toggle pf-m-full-width"
                    data-ouia-component-id="OUIA-Generated-MenuToggle-2"
                    data-ouia-component-type="PF5/MenuToggle"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <span
                      class="pf-v5-c-menu-toggle__text"
                    >
                      Filter by {key}
                    </span>
                    <span
                      class="pf-v5-c-menu-toggle__controls"
                    >
                      <span
                        class="pf-v5-c-menu-toggle__toggle-icon"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-v5-svg"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 320 512"
                          width="1em"
                        >
                          <path
                            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__pagination"
          >
            <div
              class="pf-v5-c-pagination pf-m-compact"
              data-ouia-component-id="CompactPagination"
              data-ouia-component-type="PF5/Pagination"
              data-ouia-safe="true"
              id="options-menu-top-pagination"
              style="--pf-v5-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
            >
              <div
                class="pf-v5-c-pagination__total-items"
              >
                <b>
                  1
                   - 
                  10
                </b>
                 
                of
                 
                <b>
                  0
                </b>
                 
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                class="pf-v5-c-menu-toggle pf-m-plain pf-m-text"
                data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-1"
                data-ouia-component-type="PF5/MenuToggle"
                data-ouia-safe="true"
                id="options-menu-top-toggle"
                type="button"
              >
                <span
                  class="pf-v5-c-menu-toggle__text"
                >
                  <b>
                    1
                     - 
                    10
                  </b>
                   
                  of
                   
                  <b>
                    0
                  </b>
                   
                </span>
                <span
                  class="pf-v5-c-menu-toggle__controls"
                >
                  <span
                    class="pf-v5-c-menu-toggle__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <nav
                aria-label="Pagination"
                class="pf-v5-c-pagination__nav"
              >
                <div
                  class="pf-v5-c-pagination__nav-control"
                >
                  <button
                    aria-disabled="true"
                    aria-label="Go to previous page"
                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                    data-action="previous"
                    data-ouia-component-id="OUIA-Generated-Button-plain-1"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="pf-v5-c-pagination__nav-control"
                >
                  <button
                    aria-disabled="false"
                    aria-label="Go to next page"
                    class="pf-v5-c-button pf-m-plain"
                    data-action="next"
                    data-ouia-component-id="OUIA-Generated-Button-plain-2"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                      />
                    </svg>
                  </button>
                </div>
              </nav>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-v5-c-toolbar__group"
        />
      </div>
    </div>
    <table
      aria-label="roles table"
      class="ins-c-table-empty-state pf-v5-c-table pf-m-grid-md"
      data-ouia-component-id="roles-table"
      data-ouia-component-type="PF5/Table"
      data-ouia-safe="true"
      role="grid"
    >
      <thead
        class="pf-v5-c-table__thead"
      >
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-1"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <th
            aria-sort="ascending"
            class="pf-v5-c-table__th pf-v5-c-table__sort pf-m-selected"
            data-key="0"
            data-label="Roles"
            scope="col"
            tabindex="-1"
          >
            <button
              class="pf-v5-c-table__button"
              type="button"
            >
              <div
                class="pf-v5-c-table__button-content"
              >
                <span
                  class="pf-v5-c-table__text"
                >
                  Roles
                </span>
                <span
                  class="pf-v5-c-table__sort-indicator"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </th>
          <th
            class="pf-v5-c-table__th"
            data-key="1"
            data-label="Description"
            scope="col"
            tabindex="-1"
          >
            Description
          </th>
          <th
            class="pf-v5-c-table__th"
            data-key="2"
            data-label="Permissions"
            scope="col"
            tabindex="-1"
          >
            Permissions
          </th>
        </tr>
      </thead>
      <tbody
        class="pf-v5-c-table__tbody"
        role="rowgroup"
      >
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-2"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            colspan="3"
            data-key="0"
            data-label="Roles"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-empty-state pf-m-sm"
            >
              <div
                class="pf-v5-c-empty-state__content"
              >
                <div
                  class="pf-v5-c-empty-state__header"
                >
                  <div
                    class="pf-v5-c-empty-state__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                      />
                    </svg>
                  </div>
                  <div
                    class="pf-v5-c-empty-state__title"
                  >
                    <h4
                      class="pf-v5-c-empty-state__title-text"
                    >
                      No matching {items} found
                    </h4>
                  </div>
                </div>
                <div
                  class="pf-v5-c-empty-state__body pf-v5-u-mb-md"
                >
                  This filter criteria matches no {items}.
                   
                  <br />
                  Try changing your filter settings.
                   
                  <br />
                </div>
                <div
                  class="pf-v5-c-empty-state__footer"
                >
                  <div
                    class="pf-v5-c-empty-state__actions"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-v5-c-button pf-m-link"
                      data-ouia-component-id="clear-filters-button"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      Clear all filters
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="pf-v5-c-toolbar ins-c-table__toolbar"
      data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-1"
      data-ouia-component-type="RHI/TableToolbar"
      data-ouia-safe="true"
      id="pf-random-id-0"
    >
      <div
        class="pf-v5-c-pagination pf-m-bottom"
        data-ouia-component-id="OUIA-Generated-Pagination-bottom-1"
        data-ouia-component-type="PF5/Pagination"
        data-ouia-safe="true"
        id="options-menu-bottom-pagination"
        style="--pf-v5-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="pf-v5-c-menu-toggle pf-m-plain pf-m-text"
          data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-2"
          data-ouia-component-type="PF5/MenuToggle"
          data-ouia-safe="true"
          id="options-menu-bottom-toggle"
          type="button"
        >
          <span
            class="pf-v5-c-menu-toggle__text"
          >
            <b>
              1
               - 
              10
            </b>
             
            of
             
            <b>
              0
            </b>
             
          </span>
          <span
            class="pf-v5-c-menu-toggle__controls"
          >
            <span
              class="pf-v5-c-menu-toggle__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </span>
        </button>
        <nav
          aria-label="Pagination"
          class="pf-v5-c-pagination__nav"
        >
          <div
            class="pf-v5-c-pagination__nav-control pf-m-first"
          >
            <button
              aria-disabled="true"
              aria-label="Go to first page"
              class="pf-v5-c-button pf-m-plain pf-m-disabled"
              data-action="first"
              data-ouia-component-id="OUIA-Generated-Button-plain-3"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                />
              </svg>
            </button>
          </div>
          <div
            class="pf-v5-c-pagination__nav-control"
          >
            <button
              aria-disabled="true"
              aria-label="Go to previous page"
              class="pf-v5-c-button pf-m-plain pf-m-disabled"
              data-action="previous"
              data-ouia-component-id="OUIA-Generated-Button-plain-4"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                />
              </svg>
            </button>
          </div>
          <div
            class="pf-v5-c-pagination__nav-page-select"
          >
            <span
              class="pf-v5-c-form-control"
            >
              <input
                aria-invalid="false"
                aria-label="Current page"
                data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                data-ouia-component-type="PF5/TextInput"
                data-ouia-safe="true"
                max="2"
                min="1"
                type="number"
                value="1"
              />
            </span>
          </div>
          <div
            class="pf-v5-c-pagination__nav-control"
          >
            <button
              aria-disabled="false"
              aria-label="Go to next page"
              class="pf-v5-c-button pf-m-plain"
              data-action="next"
              data-ouia-component-id="OUIA-Generated-Button-plain-5"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </button>
          </div>
          <div
            class="pf-v5-c-pagination__nav-control pf-m-last"
          >
            <button
              aria-disabled="false"
              aria-label="Go to last page"
              class="pf-v5-c-button pf-m-plain"
              data-action="last"
              data-ouia-component-id="OUIA-Generated-Button-plain-6"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                />
              </svg>
            </button>
          </div>
        </nav>
      </div>
      <div
        class="pf-v5-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-v5-c-toolbar__group"
        />
      </div>
    </div>
  </div>
</div>
`;
